syntax = "proto3";
option go_package = "pkg/portstore";

import "google/protobuf/empty.proto";

message PortReq {
    string portId = 1;
}

message OptionalPortResp {
    message PortResp {
        string          id          = 1;
        string          name        = 2;
        repeated float  coordinates = 3;
        string          city        = 4;
        string          province    = 5;
        string          country     = 6;
        repeated string alias       = 7;
        repeated string regions     = 8;
        string          timezone    = 9;
        repeated string unlocs      = 10;
        string          code        = 11;
    }
    optional PortResp resp = 1;
}

service PortStore {
    rpc PersistPorts(stream PortReq) returns (google.protobuf.Empty) {}
    rpc GetPort(PortReq) returns (OptionalPortResp) {}
}